# modify-jgjs-rules

./: .gitignore  README.md  jgjs_rules_modify.py  pyproject.toml
requirements/: gemini-group.md  http-share.md  overseas-group.md
