[project]
name = "jgjs-rules-modify"
version = "0.1.0"
description = "ClashFX configuration modifier - creates auto-select policy groups"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
jgjs-rules-modify = "jgjs_rules_modify:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
